Bug 1601184 - Make legacy mouse scroll events composed. r=smaug

Makes sense to be consistent with wheel.

Differential Revision: https://phabricator.services.mozilla.com/D55896